--- a/gb/24/5/28/n14259563.md
+++ b/gb/24/5/28/n14259563.md
@@ -3,17 +3,17 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>分析：苏宁赔掉国际米兰 中共超级足球梦碎</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14066736-GettyImages-1231469335-600x400.jpg" />
-<h6>2021年3月2日，中国江苏省南京市，中国零售商苏宁易购总部。 (STR/AFP via Getty Images)
-</h6>
+<h6>2021年3月2日，中国江苏省南京市，中国零售商苏宁易购总部。 (STR/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2024年05月29日讯】（大纪元记者林燕综合报导）由于北京缺乏足球这项世界上最受欢迎运动的扎根文化，中国企业失去对其欧洲精英足球队的控制权被认为是早晚的事。</p>
 <p>5月22日，在意大利足球俱乐部国际米兰的中国所有者苏宁控股集团未能及时偿还3.75亿欧元到期债务和利息后，美国资产管理公司橡树资本（Oaktree）接管了该俱乐部。因为这笔贷款是苏宁以其持有的国际米兰股份作为抵押的。</p>
 <p>苏宁失去国际米兰的所有权是中国企业大规模退出欧洲足球的一部分。2017年是中国足球海外扩张的高峰期，最多时拥有多达20家欧洲俱乐部；到2021年，这一数字已降至仅10个。</p>
 <p>《财富》杂志说，苏宁被迫退出欧洲足球，结束了长达十年的实验——这些针对精英体育的华而不实交易是否可以逐渐建立一个真正的足球巨头。</p>
 <p>长期担任亚洲足球记者的约翰?杜尔登（John Duerden）告诉《财富》说：“回顾过去，没有太多成功的例子。”</p>
-<figure id="attachment_13095637" aria-describedby="caption-attachment-13095637" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13095637-GettyImages-450799728-700x420.jpg"><img decoding="async" class="size-medium wp-image-13095637" src="https://i.epochtimes.com/assets/uploads/2021/07/id13095637-GettyImages-450799728-700x420-450x270.jpg" alt="" width="450" b="270" /></a><figcaption id="caption-attachment-13095637" class="wp-caption-text">图为中国广东省恒大国际足球学校的一个练习场上，一群孩子们在踢足球。(Kevin Frayer/Getty Images)</figcaption></figure>
+<figure id="attachment_13095637" aria-describedby="caption-attachment-13095637" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13095637-GettyImages-450799728-700x420.jpg" rel="nofollow"><img decoding="async" class="size-medium wp-image-13095637" src="https://i.epochtimes.com/assets/uploads/2021/07/id13095637-GettyImages-450799728-700x420-450x270.jpg" alt="" width="450" b="270"></a><figcaption id="caption-attachment-13095637" class="wp-caption-text">图为中国广东省恒大国际足球学校的一个练习场上，一群孩子们在踢足球。(Kevin Frayer/Getty Images)</figcaption></figure>
 <h2>没有足球文化 靠撒钱买俱乐部是缘木求鱼</h2>
-<p>大约十年前，中共现任党魁说他有一个梦想：将中国变成世界足球强国。这一野心很快得到了行动和资金的支持。</p>
+<p>
+大约十年前，中共现任党魁说他有一个梦想：将中国变成世界足球强国。这一野心很快得到了行动和资金的支持。</p>
 <p>中国企业集团向国内联赛投入巨资，并积极引进国际足球明星。还有一些公司斥巨资收购欧洲俱乐部的股份，以提高中国足球的水平。</p>
 <p>但他们很快发现，对斥巨资收购欧洲俱乐部股份的买卖既没有带来大规模收益，也没有让中国队在球场上取得重大胜利。一些中国老板在购买欧洲职业俱乐部的股份后几年内就选择了退出和出售。</p>
 <p>足球是一项民间运动，也必须从民间发展而来，靠撒钱买俱乐部不过是缘木求鱼。驻日本东京的足球青少年发展顾问汤姆?拜尔（Tom Byer）告诉《财富》，中国足球的民间氛围很糟糕，缺乏推动足球发展的文化。</p>
@@ -21,9 +21,9 @@
 <p>知名足球评论人士张路曾在一档访谈节目里道出中共足球思维的实情。在中共奉行“举国体制”和党管足球的大背景下，哪怕是小学搞校足球队，都要求长时间成人式训练，所以搞得没有家长愿意把孩子送过去，搞到最后小学生都没人愿意踢球。</p>
 <p>张路表示，“举国体制”就是选拔尖子，使得培养足球运动员成为少数人的事，结果造成了踢球的小学生极少。</p>
 <p>上世纪90年代，中国20个足球重点城市常年踢球的小学生有一万余人，到了2000年至2004年，这一数字可能降到5000人左右。对比日本，这一数字不低于60万人。</p>
-<figure id="attachment_5743285" aria-describedby="caption-attachment-5743285" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/06/1406290141301528.jpg"><img decoding="async" class="size-medium wp-image-5743285" src="https://i.epochtimes.com/assets/uploads/2014/06/1406290141301528-450x305.jpg" alt="" width="450" b="305" /></a><figcaption id="caption-attachment-5743285" class="wp-caption-text">图为2013年3月29日，北京，中超北京国安和广州恒安的比赛，公安在观众席前盯场。(Mark Ralston/AFP)</figcaption></figure>
+<figure id="attachment_5743285" aria-describedby="caption-attachment-5743285" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/06/1406290141301528.jpg" rel="nofollow"><img decoding="async" class="size-medium wp-image-5743285" src="https://i.epochtimes.com/assets/uploads/2014/06/1406290141301528-450x305.jpg" alt="" width="450" b="305"></a><figcaption id="caption-attachment-5743285" class="wp-caption-text">图为2013年3月29日，北京，中超北京国安和广州恒安的比赛，公安在观众席前盯场。(Mark Ralston/AFP)</figcaption></figure>
 <h2>中共超级足球大国美梦破碎始末</h2>
-<p>与21世纪10年代中期北京公布的雄心勃勃的计划相比，中国足球的表现差强人意。中国国家队仍然二十多年无缘世界杯。</p>
+与21世纪10年代中期北京公布的雄心勃勃的计划相比，中国足球的表现差强人意。中国国家队仍然二十多年无缘世界杯。</p>
 <p>2011年7月4日，中共党魁习近平会见韩国议员代表时说，中国世界杯出线、举办世界杯比赛及获得世界杯冠军，是他的三个愿望。</p>
 <p>2015年，中共官方推出“中国足球改革发展总体方案”，把足球提升为国家战略，并成立“足球改革小组”。此后，足球的金元战争开始升级。</p>
 <p>2016年，苏宁宣布收购国际米兰70%的股份，这是中国企业进军欧洲足球最引人注目的举措之一。同年，中国足协等组织提出了将中国变成“世界足球超级大国”的计划。</p>
@@ -35,9 +35,9 @@
 <p>2017年，中国足协突然要求俱乐部遏制外籍球员的“非理性支出”，并限制他们在顶级球队的出场，以支持本土人才。</p>
 <p>在当局的干预下，“金元足球”很快退潮，2016年以来中超联赛身价前10名的转会球员当中，只有奥斯卡一人目前仍留在中国，一些球队不得不解散，包括2021年的中超联赛冠军江苏苏宁。2023年中超的转播版权费相比起2015年，缩水近16倍。</p>
 <p>2020年，中超联赛要求赞助商从当地俱乐部中删除其品牌名称。</p>
-<figure id="attachment_13734655" aria-describedby="caption-attachment-13734655" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/05/id13734655-GettyImages-1396748942.jpg"><img decoding="async" class="size-medium wp-image-13734655" src="https://i.epochtimes.com/assets/uploads/2022/05/id13734655-GettyImages-1396748942-450x588.jpg" alt="" width="450" b="588" /></a><figcaption id="caption-attachment-13734655" class="wp-caption-text">图为2022年，时任国际米兰老板张康阳与国米主教练小因扎吉庆祝球队夺得意大利杯冠军。(Francesco Pecoraro/Getty Images)</figcaption></figure>
+<figure id="attachment_13734655" aria-describedby="caption-attachment-13734655" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/05/id13734655-GettyImages-1396748942.jpg" rel="nofollow"><img decoding="async" class="size-medium wp-image-13734655" src="https://i.epochtimes.com/assets/uploads/2022/05/id13734655-GettyImages-1396748942-450x588.jpg" alt="" width="450" b="588"></a><figcaption id="caption-attachment-13734655" class="wp-caption-text">图为2022年，时任国际米兰老板张康阳与国米主教练小因扎吉庆祝球队夺得意大利杯冠军。(Francesco Pecoraro/Getty Images)</figcaption></figure>
 <h2>张康阳的告别信：我一直知道 终有一天会告别</h2>
-<p>疫情可能是击碎中共足球梦的最后一个因素。在疫情封锁期间，比赛经常被推迟，进一步导致了挫败感。即使有比赛，中共严苛的COVID“清零”政策规定，只能在空无一人的体育场进行，球员在几个月内无法离开。</p>
+疫情可能是击碎中共足球梦的最后一个因素。在疫情封锁期间，比赛经常被推迟，进一步导致了挫败感。即使有比赛，中共严苛的COVID“清零”政策规定，只能在空无一人的体育场进行，球员在几个月内无法离开。</p>
 <p>而资金流似乎变得更加紧张。北京方面遏制房地产行业过度借贷的努力使恒大陷入了流动性紧缩。政府当局于2021年底接管了该公司的足球场。</p>
 <p>苏宁也面临着现金短缺的问题。随着母公司倒闭，该集团在恒大子公司的股份价值下跌。京东等电商竞争对手也给苏宁的核心零售业务带来压力，限制了其运营资金能力。</p>
 <p>作为意大利最成功的俱乐部之一，橡树接管国际米兰所有权的易手时机正好发生在该球队的上升期。国际米兰刚赢得了2024年的意甲冠军。</p>
@@ -47,39 +47,33 @@
 <p>“国籍是次要的。只要结果不错，球迷们就会把这些担忧放在一边。”亚洲足球记者杜尔登告诉《财富》。◇</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542412.md#1">【古道人生】女子嫌贫悔婚 媒人自荐女儿代替后成一品夫人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385712.md#1">【古道人生】盗贼刘雄飞知恩厚报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550235.md#1">【未解之谜】从沙漠烈焰到神秘圆洞：那些科学解不开的天坑之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552181.md#1">【直播】北约秘书长吕特与美参议员举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552572.md#1">【唐青看时事】未来战争规则变 美军准备好了吗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552990.md#1">【马克时空】面对俄军事压力 德国狂买数千战车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549271.md#1">2025迄今最热卖的十款豪华车 凌志车占三</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550608.md#1">宗庆后“美籍子女”现身 争夺娃哈哈340亿遗产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14550845.md#1">甘肃男翻墙浏览境外社媒信息被判三年 引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550490.md#1">《超人》打破3项纪录 烂番茄观众评系列最佳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552004.md#1">新庞德女郎 席德妮史威尼是最热门人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552328.md#1">杨颖与爱马仕总监合照 8岁儿“小海绵”抢镜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550386.md#1">真人《街头霸王》日本相扑手等角色人选出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551497.md#1">耗资1亿 3天预售仅百万 陈佩斯《戏台》改档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551754.md#1">别在花园里放蛋壳 改用这招对植物更好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14549048.md#1">哪些蔬果干净？哪些最脏？新榜单带你安心选购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14550829.md#1">为什么好人会比较快乐？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548271.md#1">远离失智 这样做清除大脑微塑胶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552171.md#1">【厨娘香Q秀】芋泥蛋黄油葱鸡和蟹肉雨来菇炒蛋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/28/n14259563.htm">分析：苏宁赔掉国际米兰 中共超级足球梦碎</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259563.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
